[package]
name = "show-balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2"
eyre = "0.6"
rand = "0.8.5"
promptly = "0.3.1"

[dependencies.tokio]
version = "1.32"
features = ["full"]
